@@ -7,6 +7,8 @@
  * Fixed a memory leak when using RealmBaseAdapter.
  * RealmBaseAdapter now allow RealmResults to be null (thanks @zaki50).
  * Fixed a bug where a change to a model class (RealmList<A> to RealmList<B>) would not throw a RealmMigrationNeededException.
+ * Solved ConcurrentModificationException thrown when addChangeListener/removeChangeListener got called in the onChange.
+ * Fixed duplicated listeners in the same realm instance. Trying to add duplicated listeners is ignored now.
 
 0.80.2
  * Trying to use Realm.copyToRealmOrUpdate() with an object with a null primary key now throws a proper exception.
